<resources>
    <string name="app_name">Figuras Geométricas</string>
    <string name="action_settings">Settings</string>

    <string name="circulo">Circulo</string>
    <string name="triangulo">Triángulo</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="cuadrado">Cuadrado</string>

    <string name="lado1">Lado 1:</string>
    <string name="lado2">Lado 2:</string>
    <string name="altura">Altura:</string>
    <string name="base">Base:</string>
    <string name="radio">Radio:</string>

    <string name="Calc">Calcular</string>
</resources>
